<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_store"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/action_bar"
        style="@style/TitleBar">
        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView
            style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText" />

        <View
            style="@style/TitleBarSpring" />

        <ImageView
            style="@style/TitleBarSeparator" />
        <ImageButton
            style="@style/TitleBarAction"
            android:id="@+id/btn_title_refresh"
            android:contentDescription="@string/description_refresh"
            android:src="@drawable/ic_title_refresh"
            android:onClick="onRefreshClick" />
        <ProgressBar
            style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />

        <ImageView
            style="@style/TitleBarSeparator" />
        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_title_search"
            android:onClick="onSearchClick" />


    </LinearLayout>

    <ListView
        android:id="@+id/categoryListView"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:stackFromBottom="false"
        android:transcriptMode="normal" />

    <!--<Button android:id="@+id/nextButton" android:layout_width="fill_parent" 
        android:layout_height="wrap_content" android:text="Next"/> -->
</LinearLayout>
